--- a/sorteio/style.css
+++ b/sorteio/style.css
@@ -4,7 +4,12 @@ body {
   text-align: center;
   margin: 0;
   padding: 0;
-  background-color: #f0f0f0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #0c0b0b;
 }
 
 .container {
@@ -14,13 +19,17 @@ body {
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin: 20px auto; /* Centralizar o container na tela */
+  margin-top: 20px; /* Centralizar o container na tela */
 }
 
 /* Estilos para o cabeçalho */
 h1 {
-  margin-top: 0;
+  margin-top: -20px; /* Colocar o título acima do container */
   font-size: 24px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  color: #45a049;
+
 }
 
 /* Estilos para a grade */
@@ -58,8 +67,7 @@ button:hover {
 /* Estilos para o número atual */
 #currentNumber {
   font-size: 28px;
-  font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 /* Estilos para o input */
