--- a/sorteio/style.css
+++ b/sorteio/style.css
@@ -11,6 +11,19 @@ body {
   height: 100vh;
   background-color: #0c0b0b;
 }
+.call-button {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* Estilo para o ícone */
+.icon {
+  margin-right: 10px;
+}
 
 .container {
   width: 90%; /* Ajuste para melhor visualização em dispositivos móveis */
